Adding Table User Swagger Documentation
